Reverted commit 16fd4dd20c07c139052e124e84ed407d48eb818f [16fd4dd] because it removed needed spacing between content and sidebar on Scheme Detail and Issue Detail pages.

--- a/sites/all/themes/asb/sass/_layout.scss
+++ b/sites/all/themes/asb/sass/_layout.scss
@@ -85,11 +85,9 @@ $zen-auto-include-item-base: false;
 }
 
 #main #content .wrapper{
-  @include breakpoint( md, max-width ) {
-    section.content,
-    #node-content {
-      padding: 0 10px;
-    }
+  section.content,
+  #node-content {
+    padding: 0 10px;
   }
 }
 
@@ -106,7 +104,7 @@ $zen-auto-include-item-base: false;
   // width: 100%;
   @include breakpoint(md){
     @include zen-grid-item(2, 6);
-    @include box-sizing(content-box);    
+    @include box-sizing(content-box);
   }
 }
 
